--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,59 @@
-requests==2.28.1
-websocket-client==1.4.0
-pyppeteer==1.0.2
-PyPDF2==2.10.5
+aiofiles==23.2.1
+anyio==4.0.0
+appdirs==1.4.4
+certifi==2023.7.22
+charset-normalizer==2.1.1
+ci-info==0.3.0
+click==8.1.7
+configobj==5.0.8
+configparser==6.0.0
+etelemetry==0.3.0
+exceptiongroup==1.1.3
+filelock==3.12.3
+frontend==0.0.1
+future==0.18.3
+h11==0.14.0
+httplib2==0.22.0
+idna==3.4
+importlib-metadata==6.8.0
+isodate==0.6.1
+itsdangerous==2.1.2
+looseversion==1.3.0
+lxml==4.9.3
+networkx==3.1
+nibabel==5.1.0
+nipype==1.8.6
+numpy==1.25.2
+packaging==23.1
+pandas==2.1.0
+pathlib==1.0.1
 Pillow==8.4.0
+prov==2.0.0
+pydot==1.4.2
+pyee==8.2.2
+PyMuPDF==1.23.3
+PyMuPDFb==1.23.3
+pyparsing==3.1.1
+PyPDF2==1.28.6
+pyppeteer==1.0.2
+python-dateutil==2.8.2
+pytils==0.4.1
+pytz==2023.3.post1
+pyxnat==1.6
+rdflib==7.0.0
+requests==2.28.1
+scipy==1.11.2
+simplejson==3.19.1
+six==1.16.0
+sniffio==1.3.0
+starlette==0.31.1
+tools==0.1.9
+tqdm==4.66.1
+traits==6.3.2
+typing_extensions==4.7.1
+tzdata==2023.3
+urllib3==1.26.16
+uvicorn==0.23.2
+websocket-client==1.4.0
+websockets==10.4
+zipp==3.16.2
